修复了快速狩猎无法执行的问题,增加了副本选择

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,5 +38,7 @@
     "[markdown]": {
         "editor.formatOnSave": true,
         "editor.defaultFormatter": "DavidAnson.vscode-markdownlint"
-    }
+    },
+    "python-envs.defaultEnvManager": "ms-python.python:system",
+    "python-envs.pythonProjects": []
 }
